--- a/MiraclePack/app/src/main/AndroidManifest.xml
+++ b/MiraclePack/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.MiraclePack"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".HomeBagContentActivity"
+            android:exported="false" />
         <activity
             android:name=".AddActivity"
-            android:label="Inhoud toevoegen"
-            android:exported="true" />
+            android:exported="true"
+            android:label="Inhoud toevoegen" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Miracle Pack Library" >
+            android:label="Miracle Pack Library">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
