Added password reset to the profile page

--- a/MiraclePack/app/src/main/AndroidManifest.xml
+++ b/MiraclePack/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:exported="true"
             android:label="Sign Up" />
 
+        <activity
+            android:name=".PasswordResetActivity"
+            android:label="Password Reset" />
+
+
         <!-- Rest of your activities -->
 
         <activity
