Changed little things in the code according to the review

--- a/MiraclePack/app/src/main/AndroidManifest.xml
+++ b/MiraclePack/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:label="Open location settings" />
 
         <activity
+            android:name=".SupportActivity"
+            android:exported="true"
+            android:label="Open support" />
+
+        <activity
             android:name=".SignUpActivity"
             android:exported="true"
             android:label="Sign Up" />
